[package]
name = "libutp-sys"
version = "0.1.0"
build = "build.rs"
authors = ["johsunds <jsundstrom1994@gmail.com>"]
edition = "2018"
description = "libutp bindings"
keywords = ["bittorrent", "network"]
license = "MIT"
repository = "https://github.com/johsunds/libutp-sys"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.54.1"
socket2 = "0.3.15"

[features]
build = []

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.18.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"